# RGBStudio

./: .gitignore  CMakeLists.txt  CMakeSettings.json  UniversalKeyboardRGBController.sln  architecture.md  effect.lua  readme.md
UniversalKeyboardRGBController/: ASUSAuraDeviceFactory.cpp  ASUSAuraDeviceFactory.h  ASUSAuraKeyLight.cpp  ASUSAuraKeyLight.h  ASUSAuraKeyboardDevice.cpp  ASUSAuraKeyboardDevice.h  ActionTrigger.h  ColorUtils.h  Effect.h  EffectManager.cpp  EffectManager.h  Event.h  EventManager.cpp  EventManager.h  EventQueue.cpp  EventQueue.h  EventTriggerController.cpp  EventTriggerController.h  FillEffect.cpp  FillEffect.h  FillEffectFactory.cpp  FillEffectFactory.h  FlashEffect.cpp  FlashEffect.h  IEffectAction.h  IEffectFactory.h  IEventSource.h  IKeyLight.h  IKeyboardDevice.h  KeyEvent.cpp  KeyEvent.h  KeyPressEvent.cpp  KeyPressEvent.h  KeyReleaseEvent.cpp  KeyReleaseEvent.h  KeyTrigger.cpp  KeyTrigger.h  KeyboardEventSource.cpp  KeyboardEventSource.h  LuaEffect.cpp  (+32 more)
examples/: fill_fraction.lua  key_counter.lua
include/RGBLightRunner/: HelloResponse.hpp  RGBLightRunnerAttributeDescription.hpp  RGBLightRunnerConfig.hpp  RGBLightRunnerEffect.hpp  RGBLightRunnerTrigger.hpp
include/asus_aura_adapter/: ASUSAuraDeviceFactory.hpp  ASUSAuraKeyLight.hpp  ASUSAuraKeyboardDevice.hpp
include/device_adapter_loader/: APIFunctions.hpp  ColorUtils.hpp  DeviceAdapter.hpp  DeviceFactory.hpp  DeviceFactoryInterface.hpp
include/dynamic_config/: ConfigGenericValue.hpp  DynamicConfig.hpp  DynamicConfigSpec.hpp  IConfigValue.hpp  IConfigValueTypeDesc.hpp
include/effect_manager/: ColorUtils.hpp  Effect.hpp  EffectInstance.hpp  EffectManager.hpp  IKeyLight.hpp  (+3 more)
resources/: Architecture.drawio
src/RGBLightRunner/: CMakeLists.txt  Program.cpp  Program.hpp  main.cpp
src/RGBStudio/: CMakeLists.txt  COMCallbackExceptionProtection.hpp  EncodingConverter.cpp  EncodingConverter.hpp  FSAssetLoader.cpp  FSAssetLoader.hpp  GenericAssetLoaderErrors.cpp  GenericAssetLoaderErrors.hpp  IAssetLoader.hpp  JSONRPC.cpp  JSONRPC.hpp  LightRunnerApi.cpp  LightRunnerApi.hpp  Win32Error.hpp  app.cpp  app.hpp  editor.cpp  editor.hpp  main.cpp
src/RGBStudio/frontend/: createmakefile.js  index.html  inline-html.js  makefile  package.json  rollup.config.js  tsconfig.json  vite.config.ts
src/RGBStudio/frontend/less/: editor.less
src/RGBStudio/frontend/pages/: editor.html
src/RGBStudio/frontend/src/: App.vue  InjectionKeys.ts  main.ts
src/RGBStudio/frontend/src/assets/: VKTranslations.Nordic.csv
src/RGBStudio/frontend/src/components/: ColorPickerAttribute.vue  CustomToolbar.vue  CustomToolbarButton.vue  GraphEditor.vue  KeyCodePicker.vue  KeyCodePickerAttribute.vue
src/RGBStudio/frontend/src/data/: VKTranslations.Nordic.csv
src/RGBStudio/frontend/src/graph/: RGBLightRunnerCommands.ts
src/RGBStudio/frontend/src/graph/Interfaces/: ColorPickerInterface.ts  KeyCodePickerInterface.ts
src/RGBStudio/frontend/src/graph/nodes/: ActionNode.ts  CustomNodeTypes.ts  NodeGenerator.ts  TestNode.ts
src/RGBStudio/frontend/src/router/: index.ts
src/RGBStudio/frontend/src/util/: CsvReader.ts  JSONRPC.ts  RGBStudioAPI.ts  RGBStudioMockAPI.ts  WebViewConnection.ts
src/RGBStudio/frontend/src/views/: EditorView.vue  HomeView.vue
src/RGBStudio/frontend/ts/: JSONRPC.ts  RGBStudioAPI.ts  WebViewConnection.ts  editor.m.ts
src/RGBStudio/frontend/ts/GraphEditor/: ActionConnector.ts  ActionNode.ts  BoolAttribute.ts  ColorAttribute.ts  Connector.ts  ConnectorType.ts  ConnectorTypeRepository.ts  EffectNode.ts  GraphConnection.ts  GraphConnector.ts  GraphConnectorService.ts  GraphEditor.ts  GraphModel.ts  GraphNode.ts  GraphNodeAttribute.ts  GraphSourceConnector.ts  GraphTargetConnector.ts  NumberAttribute.ts  SourceAttribute.ts  TargetAttribute.ts  TriggerConnector.ts  TriggerNode.ts  architecture.puml
src/RGBStudio/frontend/ts/SVGCompositor/: CSEvent.ts  Dragifier.ts  Event.ts  Line.ts  LineEnd.ts  Rectangle.ts  SVGCompositor.ts  SVGScratchArea.ts  StyleHelper.ts  ToolWindow.ts  Widget.ts  WidgetAtom.ts  WidgetConstructor.ts  WidgetContainer.ts  architecture.puml
src/RGBStudio/frontend/ts/SVGCompositor/behavior/: AutoSizer.ts  Dragifier.ts
src/RGBStudio/frontend/ts/SVGCompositor/trait/: Circular.ts  Clickable.ts  Hoverable.ts  Rectangular.ts  Resizing.ts
src/RGBStudio/frontend/ts/SVGCompositor/widgets/: CheckboxInputWidget.ts  Circle.ts  ColorInputWidget.ts  FitContentContainer.ts  FlexBox.ts  LineEnd.ts  NumberInputWidget.ts  PaddedContainer.ts  RectangleContainer.ts  StackPanel.ts  TextInputWidget.ts  TextWidget.ts
src/RGBStudio/helper/: setup_ultralight.cmake
src/URGBDC/: CMakeLists.txt  KeyTrigger.cpp  main.cpp
src/asus_aura_adapter/: ASUSAuraDeviceFactory.cpp  ASUSAuraKeyLight.cpp  ASUSAuraKeyboardDevice.cpp  ASUSAuraKeyboardDevice.hpp  CMakeLists.txt
src/device_adapter_loader/: CMakeLists.txt  DeviceAdapter.cpp  DeviceFactory.cpp  KeyLight.cpp  constants.hpp.in
src/dynamic_config/: CMakeLists.txt  ConfigGenericValue.cpp  DynamicConfig.cpp  DynamicConfigSpec.cpp
src/effect_manager/: CMakeLists.txt  EffectManager.cpp  KeyLight.cpp
src/effect_system_demo/: CMakeLists.txt  KeyTrigger.hpp  main.cpp
src/event_trigger_runner/: ActionTrigger.cpp  CMakeLists.txt  EventManager.cpp  EventQueue.cpp  EventTriggerController.cpp  KeyEvent.cpp  LifetimeEvent.cpp  LifetimeEventSource.cpp  TriggerObserver.cpp  TriggerObserverDispatcher.cpp
src/event_trigger_runner/default_triggers/: KeyTrigger.cpp  KeyTriggerFactory.cpp  LifetimeTrigger.cpp  LifetimeTriggerFactory.cpp
src/lua_effect_loader/: CMakeLists.txt  LuaEffect.cpp  LuaEffectFactory.cpp  LuaEffectInstance.cpp  LuaEffectSettings.cpp  LuaIKeyboardDeviceAdapter.cpp  LuaIntegerValue.cpp  LuaNumberValue.cpp  LuaStringValue.cpp  LuaTableValue.cpp  LuaTriggerObserverDispatcherAdapter.cpp  LuaUtils.cpp
src/native_effects/: CMakeLists.txt  FillEffect.cpp  FillEffectFactory.cpp  FillEffectInstance.cpp  VisorEffect.cpp  VisorEffectFactory.cpp  VisorEffectInstance.cpp
src/windows_event_sources/: CMakeLists.txt  KeyboardEventSource.cpp
(+37 files in other folders)
